--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
   <main class="container">
     <section class="img">
-      <img class="img-desktop" src="images/image-product-desktop.jpg" alt="perfume-image">
-      <img class="img-mobile" src="images/image-product-mobile.jpg" alt="perfume-image">
+      <img class="img-desktop" src="./images/image-product-desktop.jpg" alt="perfume-image">
+      <img class="img-mobile" src="./images/image-product-mobile.jpg" alt="perfume-image">
     </section>
     <section class="description">
       <span>PERFUME</span>
